--- a/Vista/Estilos/stylesForAddPAc.css
+++ b/Vista/Estilos/stylesForAddPAc.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #c7f9ff;
+    background-color: #d6fbff;
 }
 
 
@@ -9,7 +9,7 @@ body {
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    background-color: hsl(177, 71%, 61%);
+    background-color: hsl(172, 100%, 86%);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
 }
